{
    "name": "DefaultControls",
    "maps": [
        {
            "name": "Player",
            "id": "3024daf4-df71-4d52-8020-7f2a564ec703",
            "actions": [
                {
                    "name": "View",
                    "type": "Button",
                    "id": "5b3b7573-e951-4c2f-a581-2ce70df5ad29",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Focus",
                    "type": "Button",
                    "id": "79a4a42e-62ee-4646-beea-3aaa49a5400d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "JawDelta",
                    "type": "Value",
                    "id": "3eaf3a59-4623-4269-9bda-80f0b369b37b",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PitchDelta",
                    "type": "Value",
                    "id": "180a590a-4d67-4788-9590-835a38715ee9",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "ea6037b7-a00f-4ac9-aa4d-ff02a4609e5e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AltFire",
                    "type": "Button",
                    "id": "9cfef627-8e5e-468a-8e12-be85f7c47f7a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "dda60cc1-aaa9-4c1b-9b14-46f089f76308",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Space",
                    "type": "Button",
                    "id": "2a79bcff-4d27-4926-9923-a1b4b02ccb16",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3b2f1f3a-774a-40a2-930e-a3d476afe584",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "Desktop",
                    "action": "View",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a17f084-b52d-4dc5-83db-d4b2574e324a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Desktop",
                    "action": "Focus",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e0a999ef-ae74-4a98-9e00-b8ff09b41d27",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "Scale(factor=0.05)",
                    "groups": "Desktop",
                    "action": "JawDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0561a000-a48c-4c40-983b-b6d28a54f97f",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "Scale(factor=0.05)",
                    "groups": "Desktop",
                    "action": "PitchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b621043-6d55-45ea-82c5-68cf78dba000",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Desktop",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1fde3a15-9d95-4456-830f-83f58e683071",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Desktop",
                    "action": "AltFire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ac45d305-1a09-406f-bce6-7e0995240016",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa510f9c-d6ab-4aa8-82ee-f52f80c9002c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Space",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Desktop",
            "bindingGroup": "Desktop",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}